fix: featured products styles related to image being cropped in a bad position

--- a/byteForge/src/styles/productCard.scss
+++ b/byteForge/src/styles/productCard.scss
@@ -23,6 +23,7 @@
     background-color: v.$section-bg;
 
     object-fit: cover;
+    object-position: center 25%;
 
     border-radius: 0.3rem;
   }
@@ -55,8 +56,8 @@
     }
 
     img {
-      width: 100%;
-      height: 100%;
+      width: 10rem;
+      height: 10rem;
     }
 
   }
